Добавление глобальных стилей и сборки проекта

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,4 @@
-// Начните писать стили здесь
+@import "common/variables.scss";
+@import "common/global.scss";
+@import "common/fonts.scss";
+@import "common/visually-hidden.scss";
