Добавление общей стилизации

--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -3,6 +3,10 @@ $tablet-width: 768px;
 $desktop-width: 1200px;
 $mobile-width-only: 767px;
 // Colors
-$basic-black: #000000;
+$black: #000000;
+$white: #ffffff;
 $basic-blue: #81b3d2;
-$basic-white: #ffffff;
+//Fonts
+$font-family-base: "PT Sans", sans-serif;
+$font-size-base: 14px;
+$line-height-base: 21px;
