--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -2,12 +2,10 @@
 
 .page {
   height: 100%;
-  background-color: #f2f2f2;
 }
 
 .page__body {
-  min-width: 320px;
-  margin: 0 auto;
+  margin: 0;
   min-height: 100%;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
@@ -15,12 +13,14 @@
   font-size: 14px;
   line-height: 18px;
   color: #333333;
-  background-color: variables.$white;
-  box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.20);
+  background-color: #f2f2f2;
 }
 
 @media (min-width: variables.$desktop-width) {
-  .page__body {
+  .page__container {
+    margin: 0 auto;
     width: variables.$desktop-width;
+    background-color: variables.$white;
+    box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.20);
   }
 }
