--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,9 @@
 @use "common/fonts.scss";
 @use "common/title.scss";
 @use "common/button.scss";
-
+//
 @use "blocks/page.scss";
 @use "blocks/main-container.scss";
+@use "blocks/main-nav.scss";
+//
 @use "blocks/advantages.scss";
