--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -12,8 +12,9 @@
   font-family: "PT Sans", sans-serif;
   font-size: 14px;
   line-height: 18px;
+  font-weight: 400;
   color: #333333;
-  background-color: #f2f2f2;
+  background-color: variables.$white;
 }
 
 @media (min-width: variables.$desktop-width) {
