--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,8 @@
 //
 @use "blocks/page.scss";
 @use "blocks/main-container.scss";
+@use "blocks/main-header.scss";
 @use "blocks/main-nav.scss";
+@use "blocks/hero-block.scss";
 //
 @use "blocks/advantages.scss";
