--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,6 +7,7 @@
 .page__body {
   margin: 0;
   min-height: 100%;
+  min-width: 320px;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
   font-family: "PT Sans", sans-serif;
