--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -8,6 +8,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  counter-reset: number;
 }
 
 .advantages__item {
@@ -28,6 +29,22 @@
 .advantages__content-title {
   text-align: center;
   margin: 0;
+}
+
+.advantages__content-title::after {
+  counter-increment: number;
+  content: "– №" counter(number) " –";
+  counter-increment: number;
+  color: inherit;
+  text-align: center;
+  line-height: 21px;
+  text-transform: uppercase;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  display: block;
+  width: 100px;
+  height: 30px;
 }
 
 .advantages__content-description {
