--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -23,6 +23,6 @@
     margin: 0 auto;
     width: variables.$desktop-width;
     background-color: variables.$white;
-    box-shadow: 0px 5px 15px 0px rgba(0, 1, 1, 0.20);
+    box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
   }
 }
