--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,5 +10,6 @@
 @use "blocks/main-header.scss";
 @use "blocks/main-nav.scss";
 @use "blocks/hero-block.scss";
+@use "blocks/search-hotels.scss";
 //
 @use "blocks/advantages.scss";
