--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,9 +1,5 @@
 @use "../common/variables.scss";
 
-.advantages {
-  margin-bottom: 4px;
-}
-
 .advantages__list {
   list-style-type: none;
   padding: 0;
@@ -16,6 +12,15 @@
   background-color: #eeeeee;
 }
 
+.advantages__item--triangle::before {
+  content: "";
+  position: absolute;
+  width: 320px;
+  height: 37px;
+  margin-top: -17px;
+  background-image: url("../img/advantages-triangle-mobile.svg");
+}
+
 .advantages__wrapper-blue {
   color: variables.$white;
   background-color: variables.$basic-blue;
@@ -23,7 +28,11 @@
 }
 
 .advantages__wrapper {
-  padding: 24px 18px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-left: 18px;
+  margin-right: 18px;
+  border-bottom: 1px solid #d6d6d6;
 }
 
 .advantages__content-title {
@@ -71,7 +80,35 @@
 }
 
 .advantages__service-item {
-  margin-left: 65px;
+  padding-left: 65px;
+  position: relative;
+}
+
+.advantages__service-item--house::before {
+  content: "";
+  position: absolute;
+  left: 19px;
+  width: 39px;
+  height: 37px;
+  background-image: url("../img/icons/icon-house.svg.svg");
+}
+
+.advantages__service-item--food::before {
+  content: "";
+  position: absolute;
+  left: 19px;
+  width: 40px;
+  height: 35px;
+  background-image: url("../img/icons/icon-burger.svg");
+}
+
+.advantages__service-item--gift::before {
+  content: "";
+  position: absolute;
+  left: 19px;
+  width: 32px;
+  height: 38px;
+  background-image: url("../img/icons/icon-gift.svg.svg");
 }
 
 .advantages__service-title {
