--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,5 +11,9 @@
 @use "blocks/main-nav.scss";
 @use "blocks/hero-block.scss";
 @use "blocks/search-hotels.scss";
+@use "blocks/map.scss";
+@use "blocks/main-footer.scss";
+@use "blocks/social-list.scss";
+@use "blocks/copyright.scss";
 //
 @use "blocks/advantages.scss";
