--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,3 +1,5 @@
+@use "../common/variables.scss";
+
 .main-header {
   position: relative;
 }
@@ -12,6 +14,15 @@
   height: 96px;
   overflow: hidden;
   text-decoration: none;
+
+  @media (min-width: variables.$tablet-width) {
+    left: 290px;
+    z-index: 5;
+  }
+
+  @media (min-width: variables.$desktop-width) {
+    left: 507px;
+  }
 }
 
 .main-header__hero-block {
